add GC logging by default
Signed-off-by: Dennis Adjei-Baah <dennis@buoyant.io>